--- a/default.conf
+++ b/default.conf
@@ -5,7 +5,7 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
-    location / {
+    location = / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
     }
