--- a/default.conf
+++ b/default.conf
@@ -5,10 +5,14 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
-    #location = / {
-    #    root   /usr/share/nginx/html;
-    #    index  index.html index.htm;
-    #}
+    location = / {
+        root   /usr/share/nginx/equal;
+        index  equal.html;
+    }
+
+    location / {
+    	root /usr/share/nginx/nothing;
+    }
 
     error_page  404              /404.html;
     location = /404.html{
