--- a/default.conf
+++ b/default.conf
@@ -7,7 +7,7 @@ server {
 
     location = / {
         root   /usr/share/nginx/equal;
-        index  equal.html;
+        index  nothing.html;
     }
 
     location / {
