--- a/default.conf
+++ b/default.conf
@@ -5,9 +5,9 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
-    location = / {
-        root   /usr/share/nginx/equal;
-        index  nothing.html;
+    location ^~ / {
+        root   /usr/share/nginx/html;
+        index  index.html;
     }
 
     location / {
